# pycudasirecon

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  cli.html  environment.yml  genindex.html  hessian.html  index.html  installation.html  objects.inv  otf.html  parameters.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sim.html
.github/workflows/: deploy_docs.yml  test_and_deploy.yml
_modules/: index.html
_modules/pycudasirecon/: _hessian.html  _otf.html  sim_reconstructor.html
_sources/: hessian.md  index.md  installation.md
docs/: _config.yml  _toc.yml  cli.md  hessian.md  installation.md  otf.md  parameters.md  references.bib  requirements.txt  sim.md
pycudasirecon/: __init__.py  _ctyped.py  _hessian.py  _lib.py  _libwrap.py  _napari.py  _otf.py  _recon_params.py  _util.py  sim_reconstructor.py
src/pycudasirecon/: __init__.py  _ctyped.py  _hessian.py  _lib.py  _libwrap.py  _napari.py  _otf.py  _recon_params.py  _util.py  cli.py  napari.yaml  sim_reconstructor.py
tests/: test_hessian.py  test_sr.py
tests/data/: config  hess9.tif  otf.tif
